<resources>
    <string name="app_name">Matrimonial App</string>
    <string name="progress_message_loading">Loading…</string>
    <string name="alert_message_something_went_wrong">Something went wrong, please try again.</string>
    <string name="retry_btn">Retry</string>
    <string name="user_image_description">Show User Image</string>
    <string name="decline_btn_description">decline user</string>
    <string name="accept_btn_description">accept user</string>
    <string name="member_accepted_txt">Member Accepted</string>
    <string name="member_declined_txt">Member Declined</string>
    <string name="retry_btn_description">retry button to fetch user</string>
</resources>
